salesforce-main/src/main/default/objects/DFSS_SnapShot_Item__c/DFSS_SnapShot_Item__c.object-meta.xml
<CustomObject>
    <label>SnapShot Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SnapShot Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>