salesforce-main/src/main/default/objects/DFSS_SnapShot_Item__c/fields/Created__c.field-meta.xml
<CustomField>
    <fullName>Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created</label>
    <type>Checkbox</type>
</CustomField>