salesforce-main/src/main/default/objects/DFSS_SnapShot_Item__c/fields/Deployed__c.field-meta.xml
<CustomField>
    <fullName>Deployed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deployed</label>
    <type>Checkbox</type>
</CustomField>