salesforce-main/src/main/default/objects/DFSS_SnapShot_Item__c/fields/Flag1__c.field-meta.xml
<CustomField>
    <fullName>Flag1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag1</label>
    <type>Checkbox</type>
</CustomField>