salesforce-main/src/main/default/objects/DFSS_SnapShot_Item__c/fields/Flag2__c.field-meta.xml
<CustomField>
    <fullName>Flag2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag2</label>
    <type>Checkbox</type>
</CustomField>