salesforce-main/src/main/default/objects/DFSS_SnapShot_Item__c/fields/Flag3__c.field-meta.xml
<CustomField>
    <fullName>Flag3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag3</label>
    <type>Checkbox</type>
</CustomField>