salesforce-main/src/main/default/objects/DFSS_SnapShot_Item__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <label>Parent</label>
    <referenceTo>DFSS_SnapShot_Push__c</referenceTo>
    <relationshipLabel>SnapShot Items</relationshipLabel>
    <relationshipName>SnapShot_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>