salesforce-main/src/main/default/objects/DFSS_SnapShot_Item__c/fields/Problem__c.field-meta.xml
<CustomField>
    <fullName>Problem__c</fullName>
    <label>Problem</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>