salesforce-main/src/main/default/objects/DFSS_SnapShot_Item__c/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>